--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.8",
     "next": "14.1.0",
+    "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18.2.19",
+    "@types/react": "18.2.19",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
