--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.0",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
