--- a/package.json
+++ b/package.json
@@ -3,26 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.8",
+    "chart.js": "^4.4.1",
     "next": "14.1.0",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-responsive": "^9.0.2",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.0",
     "@types/node": "^20",
     "@types/react": "18.2.19",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "faker": "^6.6.6",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
